# secreter

./: .dockerignore  .drone.yaml  .gitignore  BUILD.bazel  README.md  WORKSPACE  code-of-conduct.md  go.mod  go.mod.bzl  go.sum  tools.go
cmd/cli/: BUILD.bazel  main.go
cmd/manager/: BUILD.bazel  main.go
deploy/: ClusterRole.yaml  ClusterRoleBinding.yaml  Namespace.yaml  Role.yaml  RoleBinding.yaml  ServiceAccount.yaml  ZZ_Deployment.yaml
deploy/crds/: k8s_v1alpha1_encryptedsecret_crd.yaml  k8s_v1alpha1_secretencryptionconfig_crd.yaml
example/: k8s_v1alpha1_secretencryptionconfig_cr.yaml
hack/: boilerplate.go.txt
pkg/apis/: BUILD.bazel  addtoscheme_k8s_v1alpha1.go  apis.go
pkg/apis/k8s/v1alpha1/: BUILD.bazel  doc.go  encryptedsecret_types.go  register.go  secretencryptionconfig_types.go  zz_generated.deepcopy.go  zz_generated.openapi.go
pkg/cli/: BUILD.bazel  cli.go  cli_test.go
pkg/controller/: BUILD.bazel  add_encryptedsecret.go  add_secretencryptionconfig.go  controller.go
pkg/controller/encryptedsecret/: BUILD.bazel  encryptedsecret_controller.go  encryptedsecret_controller_test.go
pkg/controller/secretencryptionconfig/: BUILD.bazel  secretencryptionconfig_controller.go
pkg/crypto/: BUILD.bazel  crypto.go
pkg/crypto/awskms/: BUILD.bazel  awskms.go
pkg/crypto/curve25519/: BUILD.bazel  curve25519.go  curve25519_test.go
pkg/crypto/gcpkms/: BUILD.bazel  gcpkms.go  gcpkms_test.go
pkg/crypto/xchacha20poly1305/: BUILD.bazel  xchacha20poly1305.go  xchacha20poly1305_test.go
version/: BUILD.bazel  version.go
