load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["version.go"],
    importpath = "github.com/amaizfinance/secreter/version",
    visibility = ["//visibility:public"],
    x_defs = {
        "Version": "{Version}",
        "GitCommit": "{GitCommit}",
        "BuildDate": "{BuildDate}",
    },
)
