load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/amaizfinance/secreter/cmd/cli",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/apis/k8s/v1alpha1:go_default_library",
        "//pkg/cli:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
        "//version:go_default_library",
    ],
)

go_binary(
    name = "secreter",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "secreter_pkg",
    srcs = [":secreter"],
    extension = "tgz",
)
