load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["cli.go"],
    importpath = "github.com/amaizfinance/secreter/pkg/cli",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis:go_default_library",
        "//pkg/apis/k8s/v1alpha1:go_default_library",
        "//pkg/crypto:go_default_library",
        "//pkg/crypto/awskms:go_default_library",
        "//pkg/crypto/curve25519:go_default_library",
        "//pkg/crypto/gcpkms:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/serializer:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/validation:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["cli_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/apis/k8s/v1alpha1:go_default_library",
        "//pkg/crypto/curve25519:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
    ],
)
