load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["encryptedsecret_controller.go"],
    importpath = "github.com/amaizfinance/secreter/pkg/controller/encryptedsecret",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/k8s/v1alpha1:go_default_library",
        "//pkg/crypto:go_default_library",
        "//pkg/crypto/awskms:go_default_library",
        "//pkg/crypto/curve25519:go_default_library",
        "//pkg/crypto/gcpkms:go_default_library",
        "//vendor/github.com/operator-framework/operator-sdk/pkg/k8sutil:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/client:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/controller:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/controller/controllerutil:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/handler:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/manager:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/reconcile:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/runtime/log:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/source:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["encryptedsecret_controller_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/apis:go_default_library",
        "//pkg/apis/k8s/v1alpha1:go_default_library",
        "//pkg/crypto/curve25519:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/scheme:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/client/fake:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/reconcile:go_default_library",
    ],
)
