load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["awskms.go"],
    importpath = "github.com/amaizfinance/secreter/pkg/crypto/awskms",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/crypto:go_default_library",
        "//pkg/crypto/xchacha20poly1305:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/arn:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/credentials:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/request:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/session:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/kms:go_default_library",
    ],
)
