load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["curve25519.go"],
    importpath = "github.com/amaizfinance/secreter/pkg/crypto/curve25519",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/crypto:go_default_library",
        "//pkg/crypto/xchacha20poly1305:go_default_library",
        "//vendor/golang.org/x/crypto/curve25519:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["curve25519_test.go"],
    embed = [":go_default_library"],
    deps = ["//pkg/crypto:go_default_library"],
)
