load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["xchacha20poly1305.go"],
    importpath = "github.com/amaizfinance/secreter/pkg/crypto/xchacha20poly1305",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/golang.org/x/crypto/blake2b:go_default_library",
        "//vendor/golang.org/x/crypto/chacha20poly1305:go_default_library",
        "//vendor/golang.org/x/crypto/hkdf:go_default_library",
        "//vendor/golang.org/x/crypto/poly1305:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["xchacha20poly1305_test.go"],
    embed = [":go_default_library"],
)
